Update Xitrum from 3.25.0 to 3.26.0